Update ApiKey.java
Include the full page in the exception and use a locally provided
UnirestInstance